--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     <div id="splashScreen" class="splash-screen">
         <div class="splash-content">
             <div class="splash-tiles">
-                <!-- Use PNG tiles from assets -->
-                <div class="tile"><img src="assets/dot.png" alt="Dot Tile"></div>
-                <div class="tile"><img src="assets/character.png" alt="Character Tile"></div>
-                <div class="tile"><img src="assets/bamboo.png" alt="Bamboo Tile"></div>
-                <div class="tile"><img src="assets/wind_south.png" alt="Wind South Tile"></div>
-                <div class="tile"><img src="assets/wind_east.png" alt="Wind East Tile"></div>
+                <div class="tile"><img src="assets/dragon_green.png" alt="Green Dragon"></div>
+                <div class="tile"><img src="assets/wild.png" alt="Wild"></div>
+                <div class="tile"><img src="assets/bamboo.png" alt="Bamboo"></div>
+                <div class="tile"><img src="assets/wind_east.png" alt="East Wind"></div>
+                <div class="tile"><img src="assets/wind_south.png" alt="South Wind"></div>
             </div>
             <h1 class="splash-title">麻将胡了</h1>
             <div class="splash-subtitle">MAHJONG WAYS</div>
@@ -32,8 +31,6 @@
     </div>
 
     <div class="game-container" style="display:none;">
-        <h1>🎰 Slot Machine 🎰</h1>
-
         <div class="canvas-wrapper">
             <canvas id="slotCanvas"></canvas>
         </div>
@@ -41,42 +38,25 @@
         <div class="controls">
             <div class="info-panel">
                 <div class="info-item">
-                    <span class="label">Credits:</span>
+                    <span class="label">Credits</span>
                     <span class="value" id="credits">1000</span>
                 </div>
                 <div class="info-item">
-                    <span class="label">Bet:</span>
+                    <span class="label">Bet</span>
                     <span class="value" id="bet">10</span>
                 </div>
                 <div class="info-item">
-                    <span class="label">Win:</span>
+                    <span class="label">Win</span>
                     <span class="value" id="win">0</span>
                 </div>
             </div>
 
             <div class="bet-controls">
-                <button id="decreaseBet" class="btn-bet">- Bet</button>
-                <button id="increaseBet" class="btn-bet">+ Bet</button>
+                <button id="decreaseBet" class="btn-bet">-</button>
+                <button id="increaseBet" class="btn-bet">+</button>
             </div>
 
             <button id="spinBtn" class="spin-button">SPIN</button>
-
-            <div class="message" id="message"></div>
-        </div>
-
-        <div class="paytable">
-            <h3>Paytable</h3>
-            <div class="paytable-grid">
-                <div class="pay-row"><span>🍒 🍒 🍒</span><span>×10</span></div>
-                <div class="pay-row"><span>🍋 🍋 🍋</span><span>×15</span></div>
-                <div class="pay-row"><span>🍊 🍊 🍊</span><span>×20</span></div>
-                <div class="pay-row"><span>🍇 🍇 🍇</span><span>×25</span></div>
-                <div class="pay-row"><span>🔔 🔔 🔔</span><span>×50</span></div>
-                <div class="pay-row"><span>💎 💎 💎</span><span>×75</span></div>
-                <div class="pay-row"><span>7️⃣ 7️⃣ 7️⃣</span><span>×100</span></div>
-                <div class="pay-row"><span>⭐ ⭐ ⭐</span><span>×200</span></div>
-                <div class="pay-row special"><span>Any 2 matching</span><span>×2</span></div>
-            </div>
         </div>
     </div>
 
